# lib/Controller/ConfigController.php
@@ -6,7 +6,7 @@ namespace OCA\Stalwart\Controller;
 
 use OCA\Stalwart\Db\ServerConfig;
 use OCA\Stalwart\Db\ServerConfigMapper;
-use OCA\Stalwart\Service\StalwartApiService;
+use OCA\Stalwart\ResponseDefinitions;
 use OCA\Stalwart\Settings\Admin;
 use OCP\AppFramework\Db\DoesNotExistException;
 use OCP\AppFramework\Db\MultipleObjectsReturnedException;
@@ -24,14 +24,13 @@ use OCP\IRequest;
 
 /**
  * @psalm-suppress UnusedClass
- * @type
+ * @psalm-import-type StalwartJsonServerConfig from ResponseDefinitions
  */
-class ApiController extends OCSController {
+class ConfigController extends OCSController {
 	public function __construct(
 		string                              $appName,
 		IRequest                            $request,
-		private readonly ServerConfigMapper $serverService,
-		private readonly StalwartApiService $stalwartApiService,
+		private readonly ServerConfigMapper $serverConfigMapper,
 	) {
 		parent::__construct($appName, $request);
 	}
@@ -39,7 +38,7 @@ class ApiController extends OCSController {
 
 	/**
 	 * List all available servers
-	 * @return DataResponse<Http::STATUS_OK, list<array{id: int, endpoint: string, username: string, password: string}>, array{}>
+	 * @return DataResponse<Http::STATUS_OK, StalwartJsonServerConfig[], array{}>
 	 * @throws OCSException If an error occurs
 	 *
 	 * 200: Returns the list of available servers
@@ -50,7 +49,7 @@ class ApiController extends OCSController {
 	public function listServers(): DataResponse {
 		try {
 			return new DataResponse(
-				array_values(array_map(fn ($i) => $i->jsonSerialize(), $this->serverService->listServers())),
+				array_values(array_map(fn ($i) => $i->jsonSerialize(), $this->serverConfigMapper->listServers())),
 				Http::STATUS_OK, []);
 		} catch (Exception $e) {
 			throw new OCSException(previous: $e);
@@ -59,17 +58,17 @@ class ApiController extends OCSController {
 
 	/**
 	 * Add a new server
-	 * @return DataResponse<Http::STATUS_OK, array{id: int, endpoint: string, username: string, password: string}, array{}>
+	 * @return DataResponse<Http::STATUS_OK, StalwartJsonServerConfig, array{}>
 	 *
 	 * 200: Returns the number of the new server
 	 * @throws OCSException
 	 */
 	#[AuthorizedAdminSetting(Admin::class)]
 	#[OpenAPI(scope: OpenAPI::SCOPE_ADMINISTRATION)]
-	#[ApiRoute(verb: 'POST', url: '/servers')]
+	#[ApiRoute(verb: 'POST', url: '/config')]
 	public function addServer(): DataResponse {
 		try {
-			return new DataResponse($this->serverService->insert(new ServerConfig())->jsonSerialize(), Http::STATUS_OK, []);
+			return new DataResponse($this->serverConfigMapper->insert(new ServerConfig())->jsonSerialize(), Http::STATUS_OK, []);
 		} catch (Exception $e) {
 			throw new OCSException(previous: $e);
 		}
@@ -78,7 +77,7 @@ class ApiController extends OCSController {
 	/**
 	 * Get the configuration of a server number `id`
 	 * @param int $id The server number
-	 * @return DataResponse<Http::STATUS_OK, array{id: int, endpoint: string, username: string, password: string}, array{}>
+	 * @return DataResponse<Http::STATUS_OK, StalwartJsonServerConfig, array{}>
 	 * @throws OCSNotFoundException If the server number `id` does not exist
 	 * @throws OCSException if an error occurs
 	 *
@@ -89,7 +88,7 @@ class ApiController extends OCSController {
 	#[ApiRoute(verb: 'GET', url: '/config/{id}')]
 	public function getServerConfig(int $id): DataResponse {
 		try {
-			$json = $this->serverService->getServer($id)->jsonSerialize();
+			$json = $this->serverConfigMapper->getServer($id)->jsonSerialize();
 			$json['password'] = '';
 			return new DataResponse($json, Http::STATUS_OK, []);
 		} catch (DoesNotExistException $e) {
@@ -106,7 +105,7 @@ class ApiController extends OCSController {
 	 * @param string $endpoint The server endpoint (e.g. `https://mail.example.com:443/api`)
 	 * @param string $username The username to authenticate with
 	 * @param string $password The password to authenticate with
-	 * @return DataResponse<Http::STATUS_OK, array{id: int, endpoint: string, username: string, password: string}, array{}>
+	 * @return DataResponse<Http::STATUS_OK, StalwartJsonServerConfig, array{}>
 	 * @throws OCSNotFoundException If the server number `id` does not exist
 	 * @throws OCSException if an error occurs
 	 *
@@ -117,39 +116,15 @@ class ApiController extends OCSController {
 	#[ApiRoute(verb: 'POST', url: '/config/{id}')]
 	public function setServerConfig(int $id, string $endpoint, string $username, string $password): Response {
 		try {
-			$entity = $this->serverService->getServer($id);
+			$entity = $this->serverConfigMapper->getServer($id);
 			$entity->setEndpoint($endpoint);
 			$entity->setUsername($username);
 			$entity->setPassword($password);
-			return new DataResponse($this->serverService->update($entity)->jsonSerialize(), Http::STATUS_OK, []);
+			return new DataResponse($this->serverConfigMapper->update($entity)->jsonSerialize(), Http::STATUS_OK, []);
 		} catch (DoesNotExistException $e) {
 			throw new OCSNotFoundException(previous: $e);
 		} catch (MultipleObjectsReturnedException|Exception $e) {
 			throw new OCSException(previous: $e);
 		}
 	}
-
-	/**
-	 * Get the status of the configuration of a server number `id`
-	 * @param int $id The server number
-	 * @return DataResponse<Http::STATUS_OK, array{type: string, text: string}, array{}>
-	 * @throws OCSNotFoundException If the server number `id` does not exist
-	 * @throws OCSException if an error occurs
-	 *
-	 * 200: Returns the status of the server configuration
-	 */
-	#[AuthorizedAdminSetting(Admin::class)]
-	#[OpenAPI(scope: OpenAPI::SCOPE_ADMINISTRATION)]
-	#[ApiRoute(verb: 'GET', url: '/{id}/status')]
-	public function getServerStatus(int $id): Response {
-		try {
-			$server = $this->serverService->getServer($id);
-		} catch (DoesNotExistException $e) {
-			throw new OCSNotFoundException(previous: $e);
-		} catch (MultipleObjectsReturnedException|Exception $e) {
-			throw new OCSException(previous: $e);
-		}
-		return new DataResponse($this->stalwartApiService->status($server), Http::STATUS_OK, []);
-	}
-
 }
