# lib/Db/ServerConfig.php
@@ -3,6 +3,7 @@
 namespace OCA\Stalwart\Db;
 
 use JsonSerializable;
+use OCA\Stalwart\ResponseDefinitions;
 use OCP\AppFramework\Db\Entity;
 
 /**
@@ -12,6 +13,7 @@ use OCP\AppFramework\Db\Entity;
  * @method void setUsername(string $username)
  * @method string getPassword()
  * @method void setPassword(string $password)
+ * @psalm-import-type StalwartJsonServerConfig from ResponseDefinitions
  */
 class ServerConfig extends Entity implements JsonSerializable {
 	private const URL_PATTERN = '/^https?:\\/\\/([a-zA-Z0-9-]+\\.)*[a-zA-Z0-9-]+(:\\d{1,5})?\\/api$/';
@@ -43,7 +45,7 @@ class ServerConfig extends Entity implements JsonSerializable {
 		return $this->username !== '' && $this->password !== '' && preg_match(self::URL_PATTERN, $this->endpoint) === 1;
 	}
 
-	/** @return array{id:int, endpoint: string, username: string, password: string} */
+	/** @return StalwartJsonServerConfig */
 	public function jsonSerialize(): array {
 		return [
 			'id' => $this->id,
