# lib/ResponseDefinitions.php
@@ -1,0 +1,15 @@
+<?php
+
+namespace OCA\Stalwart;
+
+/**
+ * @psalm-suppress UnusedClass
+ * @psalm-type StalwartJsonServerConfig = array{
+ *     id: int,
+ *     endpoint: string,
+ *     username: string,
+ *     password: string
+ * }
+ */
+class ResponseDefinitions {
+}
